--- a/style.css
+++ b/style.css
@@ -31,7 +31,10 @@ h1,h2,h3,h4,h5,h6{
 
 .section{padding:30px 0;}
 
-body{overflow-x: hidden;}/*fixes scroll bars from appearing caused by animated objects moving outside the area.*/
+body{
+    overflow-x: hidden; /*fixes scroll bars from appearing caused by animated objects moving outside the area.*/
+    -webkit-font-smoothing: antialiased;
+}
 /*
 .section:last-child{
     padding-bottom: 0;
