--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1,h2,h3,h4,h5,h6{
 .section{padding:30px 0;}
 
 body{
-    overflow-x: hidden; /*fixes scroll bars from appearing caused by animated objects moving outside the area.*/
+    /*overflow-x: hidden; attempt scroll bars from appearing caused by animated objects moving outside the area.*/
     -webkit-font-smoothing: antialiased;
 }
 /*
@@ -59,6 +59,7 @@ body{
     width:150px;
     height:70px;
     margin:10px;
+    transition: all .5s ease;
 }
 
 .header-bg-bw{
@@ -74,7 +75,24 @@ body{
     max-height: 600px;
 }
 
-.header-wrapper{background:rgba(0,0,0,.8);}
+.header-wrapper{
+    background:rgba(0,0,0,.8);
+    position: fixed;
+    width: 100%;
+    padding: 20px 0;
+    z-index: 2;
+}
+
+.header-spacer{height:130px; transition: all .4s;}
+
+.header-wrapper.headroom--not-top{
+    background:rgba(0,0,0,.6);
+    padding: 15px 0;
+}
+
+.headroom--not-top .header-logo{height: 50px;}
+
+
 
 .header-menu li{
     align-items: center;
@@ -89,7 +107,15 @@ body{
     text-transform: uppercase;
     font-weight: 700;
     border: solid 2px #fdb717;
-    padding:10px;
+    padding:10px 20px;
+}
+
+.nav-pills .nav-link.default-btn:hover{
+    color:#fff;
+    background:#ec00cf;
+    border: solid 2px #92008e;
+    transform:scale(1.03);
+    box-shadow: 0 23px 20px -20px rgba(0,0,0,.4);
 }
 
 .default-btn{
@@ -170,8 +196,8 @@ body{
     
 }
 .nav.social li a {
-    background-color: #fff;
-    color: #000;
+    background-color: #eb00ce;
+    color: #fff;
     display: block;
     height: 40px;
     position: relative;
@@ -288,9 +314,109 @@ footer p{
 }
 
 
+.scroll-down {
+  border: 2px solid #fff;
+  border-radius: 20px;
+  bottom: 60px;
+  height: 50px;
+  left: 0;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  width: 30px;
+}
+.scroll-down::before {
+  animation: scrollDownAnimation 2s infinite;
+  background-color: #fff;
+  border-radius: 100%;
+  content: '';
+  height: 6px;
+  left: 0;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  top: 10px;
+  width: 6px;
+}
+@-moz-keyframes scrollDownAnimation {
+  0% {
+    opacity: 0;
+    transform: translate(0, 0);
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+    transform: translate(0, 20px);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes scrollDownAnimation {
+  0% {
+    opacity: 0;
+    transform: translate(0, 0);
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+    transform: translate(0, 20px);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-o-keyframes scrollDownAnimation {
+  0% {
+    opacity: 0;
+    transform: translate(0, 0);
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+    transform: translate(0, 20px);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes scrollDownAnimation {
+  0% {
+    opacity: 0;
+    transform: translate(0, 0);
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+    transform: translate(0, 20px);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+
+
 /*Mobile Styles:*/
 @media screen and (max-width:767px){
     .header-wrapper{display:none;}
+    .header-spacer{height:0;}
+    .banner {
+        display: flex;
+        min-height: calc(80vh);
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 50px;
+    }
     .what-you-get-section{width:87%; margin:auto;}
     .what-you-get-column-one{margin-bottom: 40px;}
     .blurb{
@@ -308,5 +434,11 @@ footer p{
     .cta-row{
         padding: 40px 10px;
     }
+    footer p{text-align: center;}
+}
 
+
+/* Larger than mobile: */
+@media screen and (min-width:768px){
+    .scroll-down{display: none;}
 }
